fix: padding on small screen & mt-5 for p

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -106,7 +106,7 @@
   }
 
   p {
-    @apply mt-3 leading-relaxed;
+    @apply mt-5 leading-relaxed;
   }
 
   a {
